# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: README.md  config.py  main.py  pyproject.toml
